# deepworkflow

./: .env.example  .filedist.yml  .gitignore  .mise.toml  Makefile  README.md
.xdrs/: index.md
examples/basic-cli/: Makefile  deepworkflow.yml  pyproject.toml
lib/: Makefile  README.md  pyproject.toml
lib/src/deepworkflow/: __init__.py
lib/src/deepworkflow/adapters/cli/: main.py
lib/src/deepworkflow/adapters/connectors/: deepagents_connector.py
lib/src/deepworkflow/app/workflows/deepworkflow/: graph.py  routes.py  states.py
lib/src/deepworkflow/app/workflows/deepworkflow/nodes/: __init__.py  consolidate_agent.py  evaluate_map.py  evaluate_task_agent.py  execute_task_step.py  map_batches.py  plan_step.py  reflect_task_step.py  resolve_globs.py
lib/src/deepworkflow/app/workflows/file_batch_workflow/: README.md  graph.py  graph_log.py  routes.py  states.py
lib/src/deepworkflow/app/workflows/file_batch_workflow/nodes/: __init__.py  analyze_task_effort_agent.py  batch_convergence_repeat_step.py  batch_evaluate_convergence_agent.py  batch_evaluate_quality_agent.py  batch_evaluate_quality_skip_step.py  batch_execute_agent.py  batch_output_record_step.py  batch_plan_agent.py  batch_plan_skip_step.py  batch_quality_max_retries_step.py  batch_quality_retry_step.py  batch_reflect_agent.py  batch_reflect_skip_step.py  check_max_retries_policy_step.py  effort_analyze_auto_agent.py  effort_static_step.py  evaluate_batch_agent.py  evaluate_batch_convergence_agent.py  evaluate_batch_progress_agent.py  evaluate_batch_quality_agent.py  evaluate_map_batches_agent.py  execute_batch_agent.py  fail_step.py  increment_batch_repeat_step.py  increment_retry_step.py  map_batches_agent.py  map_batches_step.py  map_effort_analyze_agent.py  map_effort_step.py  map_evaluate_agent.py  map_evaluate_retry_step.py  map_increment_retry_step.py  map_plan_agent.py  map_plan_step.py  map_plan_validate_step.py  map_resolve_step.py  plan_batch_agent.py  record_output_step.py  reduce_consolidate_agent.py  (+9 more)
lib/src/deepworkflow/shared/: agent.py  config.py  prompts.py  runner.py  types.py  workflow_log.py
lib/tests/: agent_test.py  config_test.py  conftest.py  evaluate_task_test.py  graph_test.py  map_batches_test.py  reflect_step_test.py  resolve_globs_test.py  routes_test.py  types_test.py
lib/tests/deepworkflow/adapters/cli/: main_test.py
lib/tests/deepworkflow/adapters/connectors/: deepagents_connector_test.py
lib/tests/deepworkflow/app/workflows/file_batch_workflow/: file_batch_workflow_test.py  graph_test.py  routes_test.py
lib/tests/deepworkflow/app/workflows/file_batch_workflow/nodes/: __init___test.py  batch_convergence_repeat_step_test.py  batch_evaluate_convergence_agent_test.py  batch_evaluate_quality_agent_test.py  batch_execute_agent_test.py  batch_plan_agent_test.py  batch_quality_retry_step_test.py  (+29 more)
lib/tests/deepworkflow/shared/: agent_test.py  config_test.py  prompts_test.py  types_test.py  workflow_log_test.py
(+102 files in other folders)
