[project]
name = "deepworkflow"
version = "0.1.0"
description = "A graph of agents for processing files with map-plan-execute-judge-reduce workflow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deepagents>=0.6.8",
    "langgraph>=1.2.4",
    "langchain-core>=1.4.1",
    "langchain-openai>=0.3.0",
    "mlflow>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
deepworkflow = "deepworkflow.adapters.cli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepworkflow"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
python_files = "*_test.py"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
unresolved-import = "ignore"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/coverage-html"

[tool.uv]
cache-dir = ".cache/uv"

[tool.ruff]
cache-dir = ".cache/ruff"
output-format = "grouped"
line-length = 120
target-version = "py311"
src = ["src", "tests", "tests_integration"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
task-tags = ["TODO"]
select = ["ERA", "FAST", "ANN", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM",
  "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FIX", "INT", "ISC", "ICN", "LOG", "G",
  "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID",
  "TC", "ARG", "PTH", "FLY", "I", "C90", "NPY", "PD", "N", "PERF", "E", "W",
  "D", "F", "PGH", "PL", "UP", "FURB", "RUF", "TRY"]
ignore = ["ANN002", "ANN003", "ANN401", "D100", "D101", "D102", "D103", "D104",
  "D105", "D106", "D107", "COM812", "D203", "D213", "D400", "D401", "D404", "D415", "FIX002",
  "TC001", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "ANN201", "ANN001", "PLR2004", "D", "E501", "PLC0415", "W291", "INP001"]
# LLM prompt strings are inherently long; PERF401 fires on conditional appends in complex validation logic
"src/deepworkflow/app/workflows/file_batch_workflow/nodes/map_batches_agent.py" = ["E501", "ANN001"]
"src/deepworkflow/app/workflows/file_batch_workflow/nodes/evaluate_map_batches_agent.py" = ["E501", "PERF401"]
